--- a/defaultstyles.css
+++ b/defaultstyles.css
@@ -31,6 +31,7 @@ html, body {
 }
 
 #htname {
+	padding-top: 5px;
 	font-size: 30px;
 	font-weight: 400;
 }
@@ -53,11 +54,11 @@ mybold {
 
 .svgico {
 	display: inline-block;
-	padding-right: 7px;
+	padding-right: 3px;
 }
 
 #icons {
-	padding-top: 10px;
+	/*padding-top: 5px;*/
 	padding-bottom: 15px;
 }
 
